# esp32controlboard

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  COM_PORT_TROUBLESHOOTING.md  DEVICE_MANAGEMENT_FIX.md  Dockerfile  ESP32_LOGGING_GUIDE.md  ESP32_SUPABASE_INTEGRATION_GUIDE.md  ESP32云服务器通信解决方案.md  ESP32连接云服务器指南.md  FLASH_TX_ERROR_FIX.md  INSTALL_GUIDE.md  OTA_IMPLEMENTATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION_REPORT.md  README-OTA.md  README.md  README_SUPABASE_INTEGRATION.md  SCRIPTS_SUMMARY.md  SCRIPTS_USAGE.md  auto_build.bat  build.ps1  build_only.bat  build_only.sh  check_env.sh  deploy.sh  detect_esp32.sh  diagnostic_report.md  docker-compose.yml  extract_version.cmake  flash.bat  flash_auto.bat  flash_com10.bat  install_ch340_driver.sh  monitor_com10.bat  partitions_16mb_ota.csv  quick_install.sh  register-esp32.sh  sdkconfig  setup_env_macos.sh  (+5 more)
cloud_server/: OTA_DEPLOYMENT_HISTORY_FIX.md  SETUP_OTA_DATABASE.md  package-lock.json  package.json  server.js  setup-database.js  simple-supabase-server.js  supabase-config.js  (+10 more)
main/: CMakeLists.txt  channel_parse.c  channel_parse.h  cloud_client.c  cloud_client.h  data_integration.c  data_integration.h  drv_keyadouble.c  drv_keyadouble.h  drv_payout.c  drv_payout.h  drv_sanside.c  drv_sanside.h  http_server.c  http_server.h  log_config.c  log_config.h  main.c  main.h  motor_driver.c  motor_driver.h  ota_manager.c  ota_manager.h  sbus.c  sbus.h  supabase_integration.c  supabase_integration.h  t12d_receiver.c  t12d_receiver.h  time_manager.c  time_manager.h  version.h  wifi_manager.c  wifi_manager.h
(+113 files in other folders)
